Updating Java syntax